# Momentum-Signal-Trading

./: .env.example  .gitignore  .settings.json  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: ALERT_LOG.md  DEPLOYMENT.md  EMAIL_COMMANDS.md  EMAIL_REPORTING.md  LOG_RETENTION.md  MOMENTUM_STRATEGIES.md  RISK_CONSTRAINTS.md  RUNNING.md  SIGNAL_RANKINGS_LOG.md  STRATEGY_THEORY.md  TESTING.md
notebooks/operational/: daily_runner_walkthrough.ipynb  email_commands_walkthrough.ipynb  live_signal_walkthrough.ipynb  live_vs_backtest_reconciliation.ipynb  portfolio_snapshot_report.ipynb
notebooks/research/: DHI0016_notebook1_research_and_EDA_IMPROVED.ipynb  DHI0016_notebook2_strategy_coding_IMPROVED.ipynb  DHI0016_notebook3_full_backtest_IMPROVED.ipynb  strategy-test.ipynb
src/momentum_trading/: daily_runner.py
src/momentum_trading/backtest/: momentum_backtest.py
tests/: conftest.py  test_architecture.py  test_daily_runner.py  test_docker_entrypoint.py  test_epic2_governance.py  test_epic4_reporting.py  test_epic8_10_safety.py  test_execution_safety.py  test_governance.py  test_reporting.py
tests/backtest/: test_momentum_backtest.py
tests/core/: test_audit_log.py  test_functions_quant_extensions.py  test_fundamentals.py  test_log_retention.py  test_macro_data.py  test_strategy_signals.py  test_technical_indicators.py
tests/execution/: test_live_signal.py
tests/interfaces/: test_email_commands.py  test_email_diagnostics.py  test_notifications.py
(+15 files in other folders)
