[project]
name = "momentum-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibapi>=9.81.1.post1",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "msal>=1.31.0",
    "notebook>=7.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pandas-datareader>=0.11.1",
    "pandas-market-calendars>=5.4.0",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "yfinance>=1.5.1",
]


[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
daily-runner = "momentum_trading.daily_runner:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
